# NeuralPlayground

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  NPG_environments.pkl  README.md  batch.aux  batch.tex  batch.toc  colab_example.ipynb  config_params.yaml  contributors.md  genindex.html  george_test.ipynb  index.html  npg_intro.ipynb  objects.inv  output.json  output.txt  pyproject.toml  requirements.txt  requirements.yml  search.html  searchindex.js  setup.py  sitemap.xml  tox.ini  ~$Presentation1.pptx
.github/workflows/: docs_build_and_deploy.yml  python-app.yml  test_and_deploy.yml
Utilities/: CODE_OF_CONDUCT.md  LISENCES_DRAFT.md  ROADMAP.md  contributors.md
_static/: documentation_options.js
ccnlab_some inspiration/: evaluation.py
ccnlab_some inspiration/baselines/: basic.py  core.py
cnnlab_some_inspiration/: utils.py
debugging/: Untitled.ipynb  backup_simple_sargolini.py  config_params.yaml  debug.py  dev_backend_runs.py  live_variables.py  run_back.py  saved  testing.py  testing_gym.py
docs/: requirements.txt
docs/source/: api_index.rst  conf.py  getting_started.md  index.md  index.rst  installation.md  read_me.rst  readme_link.rst
documents/: CITATION.cff  README.md  ROADMAP.md  citation.cff  code_of_conduct.md  contributors.md  development_guidelines.md  licence.md  road_map.md  style_guide.md
documents/Style Guide/: StyleGuide.md
documents/style_guide/: style_guide.md
environments/: Testing_Hafting.ipynb  Tests.py  core.py  environment.py  examples.ipynb  simplest_env_example.ipynb  testing_deepmind_lab.py  testing_weber_model.ipynb
environments/Environment/: README.md  simple2d.py
environments/Experiments/: README.md
environments/Jupyter Notebook/: examples.ipynb
environments/env_list/: simple2d.py
environments/environments/: 3d_simple_room.py  README.md  merging_room.py  merging_room_bck.py  simple2d.py
environments/experiment_data/: Testing_Hafting.ipynb  behavioral_data.py  testing_raw_data.ipynb
environments/experiments/: README.md  behavioral_data.py  merge_room_data.py
examples/: README.md  SR_dev.py  SRexample.ipynb  agent_examples.ipynb  arena_examples.ipynb  basic_example.ipynb  build_arena.textClipping  colab_example.ipynb  cross_comparison.html  cross_comparison.py  cross_comparison_test.html  custom_wall_testing.ipynb  experimental_data_examples.ipynb  final_rnn_turorial.ipynb  hackathon.ipynb  hackathon_solutions.ipynb  merging_rooms.ipynb  play_sargolini.py  pre_train_networks.py  refactor_rnn_tutorial.ipynb  rnn_tutorial.ipynb  saving_feature.ipynb  testing_feature.ipynb  testing_features.ipynb  testing_hafting.ipynb  testing_save.env  testing_weber_model.ipynb
examples/Arena_examples/: testing_connected_rooms.py
examples/Cross_comparison_examples/: run_cross_comparison.textClipping
examples/agent_examples/: TEM_README.md  WHITTINGTON_README.md  agent_examples.ipynb  plotting_metrics.py  stachenfeld_2018_examples.ipynb  tem_plot_test.py  tem_run_test.py  torch_TEM_example.py  weber_2018_example.ipynb  whittington_2020_debug.py  whittington_2020_example.ipynb  whittington_2020_examples.ipynb  whittington_2020_plot.py  whittington_2020_plot_test.py  whittington_2020_run.py  whittington_2020_slurm.sh  whittington_2020_test.py  whittington_run.py  whittington_slurm.sh  whittington_test.py
examples/arena_examples/: 2d_arenas_examples.ipynb  2d_merging_rooms_examples.ipynb  arena_examples.ipynb  workshop.ipynb
examples/build_arena/: custom_wall_testing.ipynb
examples/comparaison_board_examples/: comparaison_board.py
examples/comparison_board_examples/: comparaison_board.py  comparison_board.ipynb
examples/comparisons_examples/: Comparision_from_manadger.ipynb  Comparision_from_manager.ipynb  comparison_board.ipynb  comparison_examples.ipynb  comparison_examples_score.ipynb  comparison_from_manager.ipynb  place_cell_score_example.ipynb  simulation_manager.ipynb
examples/experimental_examples/: Hafting_2008_examples.ipynb  Sargolini_2006_examples.ipynb  Wernle_2018_examples.ipynb  experimental_data_examples.ipynb
examples/look_at_experimental_data/: basic_example.ipynb  test_all_exp_data.ipynb  testing_hafting.ipynb
examples/neuroai_tutorial/: debug_rnn_analysis.py  pre_train_networks.py  refactor_rnn_tutorial.ipynb  rnn_tutorial.ipynb  test_training_saving.py
examples/run_single_model/: TEM_2020.ipynb
examples/testing_slides/: Untitled.ipynb  workshop.ipynb
examples/tmp_tutorial_model/: based_rnn
model/: README.md  basic.py  core.py  parameters.py  refactor_basic.py
models/: README.md  core.py  weber_and_sprekeler.py
neuralplayground/: README.md  __init__.py  available_classes.py  datasets.py  debug.py  debug_1.py  experimentconfig.py  saved_model.py  saved_models.py  utils.py
neuralplayground.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
neuralplayground/agents/: README.md  Sorscher_2022.py  __init__.py  agent_core.py  burak2009.py  class.py  class_grid_run_config.py  class_plotting_utils.py  class_run.py  debug.py  discrete_agent.py  domine_2023.py  domine_2023_1.py  domine_2023_2.py  domine_2023_2_mp.py  domine_2023_2seed.py  domine_2023_3.py  domine_2023_4.py  domine_2023_seed.py  george_2021.py  jax_optimised_version.py  lenghts.py  run_back.py  stachenfeld_2018.py  submit_it_Big.py  submit_it_test.py  submit_it_test_big.py  torch_TEM.py  weber_2018.py  whittington_2020.py
neuralplayground/arenas/: README.md  __init__.py  arena_core.py  batch_environment.py  connected_rooms.py  discrete_grid.py  discritized_objects.py  hafting_2008.py  sargolini_2006.py  simple2d.py  torch_TEM_env.py  wernle_2018.py
neuralplayground/backend/: __init__.py  cross_comparison.py  default_experiment.py  default_simulation.py  (+2 more)
scripts/: debug_burak.py  testing_sr.py
sehec/: __init__.py  available_classes.py  experimentconfig.py  utils.py
sehec.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: README.md  agent_test.py  arena_exp_test.py  environment_test.py  model_test.py  sample_test.py  test_agent.py  test_arena_exp.py  test_comparison.py
(+1457 files in other folders)
