[project]
name = "NeuralPlayground"
authors = [
  {name = "Clementine Domine"},
  {name = "Rodrigo Carrasco-Davis", email = "rodrigo.carrasco.davis@gmail.com"},
]
description = "The standardised environment for the hippocampus and entorhinal cortex models"
readme = "README.md"
requires-python = ">=3.11.0"
dynamic = ["version"]

license = {text = "MIT"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
  "scipy",
  "pandas",
  "tqdm",
  "jupyter",
  "ipython",
  "matplotlib",
  "deepdiff",
  "opencv-python",
  "gymnasium",
  "scikit-image",
  "pooch",
  "colorama",
  "scikit-learn"
]

[project.urls]
"Homepage" = "https://github.com/ClementineDomine/NeuralPlayground"
"Bug tracker" = "https://github.com/ClementineDomine/NeuralPlayground/issues"
"Documentation" = "https://github.com/ClementineDomine/NeuralPlayground"
"Source code" = "https://github.com/ClementineDomine/NeuralPlayground"
"User support" = "https://github.com/ClementineDomine/NeuralPlayground/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
  "torch",
  "tensorboard",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["neuralplayground*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "--cov=neuralplayground"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.check-manifest]
ignore = [
  "*.yaml",
  ".all-contributorsrc",
  "tox.ini",
  "tests/*",
]

[tool.ruff]
line-length = 88
exclude = ["__init__.py", "build", ".eggs", "*.ipynb"]
fix = true

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = [
  "E",      # pycodestyle errors
  "F",      # Pyflakes
  "I",      # isort
  "D",      # pydocstyle
  "NPY201", # checks for syntax that was deprecated in numpy2.0
]
ignore = [
  "D100",  # Missing docstring in public module
  "D101",  # Missing docstring in public class
  "D102",  # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in __init__
  "D203",  # Incompatible with D211 (no-blank-line-before-class)
  "D205",  # 1 blank line required between summary line and description
  "D213",  # Incompatible with D212 (multi-line-summary-first-line)
  "D400",  # First line should end with a period
  "D401",  # First line should be in imperative mood
  "D415",  # First line should end with a period, question mark, or exclamation point
  "D417",  # Missing argument descriptions in the docstring
]
per-file-ignores = {}

[tool.ruff.format]
docstring-code-format = true # Also format code in docstrings
